extends to generate podcast from arxiv reseach paper

--- a/.env.template
+++ b/.env.template
@@ -10,3 +10,6 @@ OPENAI_API_KEY=your_api_key # DO NOT COMMIT ANY FILE WITH THIS KEY SET
 SENDGRID_API_KEY=your_api_key # DO NOT COMMIT ANY FILE WITH THIS KEY SET
 FROM_EMAIL=your_email # DO NOT COMMIT ANY FILE WITH THIS KEY SET
 TO_EMAIL=your_email # DO NOT COMMIT ANY FILE WITH THIS KEY SET
+
+## ELEVENLABS SETTINGS
+ELEVENLABS_API_KEY=your_api_key
